Enable preview in pom.xml